使用arm Cortex-A系列处理器交叉编译工具链

--- a/14.04/Dockerfile
+++ b/14.04/Dockerfile
@@ -11,5 +11,5 @@ RUN dpkg --add-architecture i386; \
     DEBIAN_FRONTEND=noninteractive apt-get install -y lib32bz2-1.0 lib32z1 lib32ncurses5 lib32ncursesw5 lib32stdc++6 libexpat1-dev:i386; \
     DEBIAN_FRONTEND=noninteractive apt-get install -y scons; \
     cd /home; \
-    wget https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/;
+    wget https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-a/10.2-2020.11/binrel/gcc-arm-10.2-2020.11-x86_64-aarch64-none-linux-gnu.tar.xz;
 
